[package]
name = "tackler-tts"
description = "Tackler Time Tracking System"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/tackler-ng/tackler-tts"
keywords = [ "time-tracking" ]
include = [ "src/**/*.rs", "README.md", "build.rs", "LICENSE", "NOTICE" ]
rust-version = "1.85.0"


[dependencies]
