#
# Tackler-TTS 2025
# SPDX-License-Identifier: Apache-2.0
#
[package]
name = "tackler-tts"
version = "0.0.2"
description = "Tackler Time Tracking System"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
include.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tackler-tts-core = { path = "../tts-core", version = "0.0.1" }
tackler-tts-git  = { path = "../tts-git",  version = "0.0.1" }

clap = { version = "4.5.38", features = [ "derive" ] }
log = { workspace = true }
mimalloc = { workspace = true }
